# matchman

./: .editorconfig  .flake8  .gitignore  Dockerfile  Dockerfile.alpine  README.md  config.py  firebird.cfg  pyproject.toml  requirements.txt  run.py  setup.cfg
.docker/: Dockerfile
.docker/root/app/: matchman-0.1.0-py3-none-any.whl
.docker/root/etc/s6-overlay/s6-rc.d/svc-matchman/: run
.docker/root/etc/s6-overlay/s6-rc.d/svc-matchman/data/: check
.docker/root/opt/firebird/: firebird.msg
.github/: CODEOWNERS
.github/workflows/: build-container.yml  build-wheel.yml  super-linter.yml  super-linter.yml.off
app/: __init__.py
app/templates/: results.html
matchman/: __init__.py  config.py  database.py  run.py
matchman/competitions/: __init__.py  routes.py
matchman/competitions/templates/: competition_overview.html  competition_results.html
matchman/edit/: __init__.py  routes.py
matchman/edit/templates/: edit.html
matchman/main/: __init__.py  routes.py
matchman/main/templates/: index.html
matchman/templates/: base.html  competition_results.html  competitions.html
root/etc/s6-overlay/s6-rc.d/init-matchman-config/: up
tests/: health_check.py
