[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matchman"
version = "0.1.0"
description = "A short description of your project"
readme = "README.md"
authors = [
    { name = "Martin Groeneveld" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "firebird-driver",
    "Flask"
]

[project.urls]
Homepage = "https://matchman.groveld.com"
Source = "https://github.com/groveld/matchman"
Issues = "https://github.com/groveld/matchman/issues"

[project.scripts]
matchman = "matchman.run:main"

[tool.setuptools.packages.find]
include = ["matchman*"]

[tool.setuptools.package-data]
matchman = [
    "templates/*",
    "static/*",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = 'black'
line_length = 88
