[metadata]
name = matchman
version = 0.1.0
author = Martin Groeneveld
description = A Flask application packaged as a wheel
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/groveld/matchman
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = matchman
include_package_data = True
install_requires =
    Flask
python_requires = >=3.6

[options.entry_points]
console_scripts =
    matchman = matchman.run:main
